[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/CodePuzzle/CodePuzzle.gd" type="Script" id=1]
[ext_resource path="res://Images/material1.jpg" type="Texture" id=2]
[ext_resource path="res://Game/CodePuzzle/Camera2D.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
position = Vector2( -47.3909, -58.6153 )
script = ExtResource( 1 )

[node name="Game" type="Control" parent="."]
margin_left = 106.0
margin_top = 115.0
margin_right = 958.0
margin_bottom = 612.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -50.0
margin_right = 84.0
margin_bottom = 4278.0
rect_scale = Vector2( 0.996056, 1.11798 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Game"]
margin_left = 170.0
margin_top = 580.0
margin_right = 758.0
margin_bottom = 5276.0
size_flags_stretch_ratio = 1.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Game"]
margin_left = 408.0
margin_top = -23.0
margin_right = 483.0
margin_bottom = 40.0
color = Color( 0.0117647, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionNumberLabel" type="Label" parent="Game"]
margin_left = 417.0
margin_top = -4.0
margin_right = 439.0
margin_bottom = 10.0
rect_scale = Vector2( 2.52, 2.36 )
text = "1/1"

[node name="SideImages" type="Control" parent="."]
margin_left = 816.922
margin_top = 290.995
margin_right = 856.922
margin_bottom = 330.995
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SideImages"]
margin_left = -412.0
margin_top = -85.0
margin_right = -95.0
margin_bottom = -22.0
color = Color( 0.0117647, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionNumberLabel" type="Label" parent="SideImages"]
margin_left = -393.0
margin_top = -66.0
margin_right = -283.0
margin_bottom = -52.0
rect_scale = Vector2( 2.52, 2.36 )
text = "Images selection"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="SideImages"]
margin_left = -465.0
margin_top = 46.0
margin_right = -65.0
margin_bottom = 296.0
rect_min_size = Vector2( 400, 250 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 544.824, 356.943 )
current = true
script = ExtResource( 4 )

[node name="Submit" type="Button" parent="."]
margin_left = 872.027
margin_top = 109.005
margin_right = 981.027
margin_bottom = 177.005
text = "SUBMIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLoadTimer" type="Timer" parent="."]

[connection signal="item_selected" from="SideImages/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Submit" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="QuestionLoadTimer" to="." method="_on_QuestionLoadTimer_timeout"]
